--- a/jhs/images/boincc/docker-compose.yml
+++ b/jhs/images/boincc/docker-compose.yml
@@ -4,11 +4,14 @@ volumes:
 services:
   example:
     image: boinc/client
+    # docker buildx build --platform linux/amd64 -t boinc-client .  
     environment:
-      - BOINC_CMD_LINE_OPTIONS=--dir /var/lib/boinc --attach_project http://172.30.1.115/hello 8cbaaf7d145998ec0e3045aa0604722d
-
+      - BOINC_CMD_LINE_OPTIONS=--dir /var/lib/boinc --attach_project http://172.30.1.115/hello ${USER_ACCOUNT_KEY}
+    platform: linux/amd64
+    
     volumes:
       - boinc_data:/var/lib/boinc
       - ./cc_config.xml:/etc/boinc-client/cc_config.xml
+
     restart: unless-stopped
 
