--- a/jhs/images/boinc-client-docker/Dockerfile.arm32v7
+++ b/jhs/images/boinc-client-docker/Dockerfile.arm32v7
@@ -1,10 +1,7 @@
-
-FROM arm64v8/ubuntu:22.04
-# docker pull arm64v8/ubuntu:22.04
-# arm64v8/ubuntu:22.04
+FROM arm32v7/ubuntu:rolling
 
 LABEL maintainer="BOINC" \
-      description="A lightweight BOINC client on ARMv8 64-bit architecture."
+      description="A lightweight BOINC client on ARMv7 32-bit architecture."
 
 # Global environment settings
 ENV BOINC_GUI_RPC_PASSWORD="123" \
