--- a/jhs/images/boinc-client-docker/Dockerfile.base-ubuntu
+++ b/jhs/images/boinc-client-docker/Dockerfile.base-ubuntu
@@ -1,10 +1,7 @@
-
-FROM arm64v8/ubuntu:22.04
-# docker pull arm64v8/ubuntu:22.04
-# arm64v8/ubuntu:22.04
+FROM ubuntu:latest
 
 LABEL maintainer="BOINC" \
-      description="A lightweight BOINC client on ARMv8 64-bit architecture."
+      description="Ubuntu base image for lightweight BOINC client."
 
 # Global environment settings
 ENV BOINC_GUI_RPC_PASSWORD="123" \
@@ -23,11 +20,16 @@ EXPOSE 31416
 
 # Install
 RUN apt-get update && apt-get install -y --no-install-recommends \
+# Install PPA dependency
+    software-properties-common \
 # Install Time Zone Database
-	tzdata \
+	tzdata && \
 # Install BOINC Client
+    add-apt-repository -y ppa:costamagnagianfranco/boinc && \
+    apt-get update && apt-get install -y --no-install-recommends \
     boinc-client && \
 # Cleaning up
+    apt-get remove -y software-properties-common && \
     apt-get autoremove -y && \
     rm -rf /var/lib/apt/lists/*
 
