--- a/jhs/images/boinc-client-docker/Dockerfile.nvidia
+++ b/jhs/images/boinc-client-docker/Dockerfile.nvidia
@@ -1,10 +1,7 @@
-
-FROM arm64v8/ubuntu:22.04
-# docker pull arm64v8/ubuntu:22.04
-# arm64v8/ubuntu:22.04
+FROM nvidia/cuda:12.8.1-base-ubuntu24.04
 
 LABEL maintainer="BOINC" \
-      description="A lightweight BOINC client on ARMv8 64-bit architecture."
+      description="NVIDIA-savvy (CUDA & OpenCL) BOINC client."
 
 # Global environment settings
 ENV BOINC_GUI_RPC_PASSWORD="123" \
@@ -23,11 +20,20 @@ EXPOSE 31416
 
 # Install
 RUN apt-get update && apt-get install -y --no-install-recommends \
+# Install PPA dependency
+    software-properties-common \
 # Install Time Zone Database
-	tzdata \
+	tzdata && \
 # Install BOINC Client
+    add-apt-repository -y ppa:costamagnagianfranco/boinc && \
+    apt-get update && apt-get install -y --no-install-recommends \
     boinc-client && \
+# Install Nvidia OpenCL
+    add-apt-repository -y ppa:graphics-drivers && \
+    apt-get update && apt-get install -y --install-recommends \
+    nvidia-opencl-dev && \
 # Cleaning up
+    apt-get remove -y software-properties-common && \
     apt-get autoremove -y && \
     rm -rf /var/lib/apt/lists/*
 
