--- a/jhs/images/boincc/.env
+++ b/jhs/images/boincc/.env
@@ -1,1 +1,3 @@
-USER_ACCOUNT_KEY=52b85e7032f89f30c9942aff1367cafd
+BOINC_ACCOUNT_KEY=52b85e7032f89f30c9942aff1367cafd
+BOINC_REMOTE_HOST=172.30.1.115
+BOINC_PROJECT_URL=http://172.30.1.115/hello
