--- a/jhs/images/boincc/Dockerfile.arm64v8
+++ b/jhs/images/boincc/Dockerfile.arm64v8
@@ -31,4 +31,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     apt-get autoremove -y && \
     rm -rf /var/lib/apt/lists/*
 
+RUN apt update && apt install -y nano cron
+    
 CMD ["start-boinc.sh"]
