--- a/jhs/images/boincc/docker-compose.yml
+++ b/jhs/images/boincc/docker-compose.yml
@@ -12,10 +12,11 @@ services:
         - platform=linux/arm64
     image: boincc:latest
     environment:
-      - BOINC_CMD_LINE_OPTIONS=--dir /var/lib/boinc --attach_project http://172.30.1.115/hello ${USER_ACCOUNT_KEY}
-    
+      - BOINC_CMD_LINE_OPTIONS=--dir /var/lib/boinc --attach_project ${BOINC_PROJECT_URL} ${BOINC_ACCOUNT_KEY}
+      - BOINC_REMOTE_HOST=${BOINC_REMOTE_HOST}
+      - BOINC_PROJECT_URL=${BOINC_PROJECT_URL}
+      - BOINC_ACCOUNT_KEY=${BOINC_ACCOUNT_KEY}
     volumes:
       - boinc_data:/var/lib/boinc
       - ./cc_config.xml:/etc/boinc-client/cc_config.xml
-
     restart: unless-stopped
