--- a/jhs/images/boincc/Dockerfile.nvidia
+++ b/jhs/images/boincc/Dockerfile.nvidia
@@ -37,4 +37,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     apt-get autoremove -y && \
     rm -rf /var/lib/apt/lists/*
 
+RUN apt update && apt install -y nano cron
+
+RUN apt update && apt install -y docker.io
+    
 CMD ["start-boinc.sh"]
