--- a/ndist/.env
+++ b/ndist/.env
@@ -8,14 +8,14 @@ TAG=-b2d
 # -----------------------------------------------------------------------
 
 # the URL the server thinks its at
-URL_BASE=http://192.168.0.234
+URL_BASE=http://219.254.89.60:8088
 # -----------------------------------------------------------------------------
 # the following must be set before you build a project, and cannot be changed
 # afterwards
 # -----------------------------------------------------------------------------
 
 # the project name
-PROJECT=hello
+PROJECT=ndist
 
 # the user who builds the server source and runs the BOINC daemons
 BOINC_USER=boincadm
