--- a/ndist/docker-compose.yml
+++ b/ndist/docker-compose.yml
@@ -6,6 +6,7 @@ volumes:
 
 services:
   mysql:
+    image: ghcr.io/jehoonsong/ndist-mysql:latest
     build: 
       context: images/mysql
     volumes:
@@ -14,6 +15,7 @@ services:
     ports:
       - "3307:3306"
   apache:
+    image: ghcr.io/jehoonsong/ndist-apache:latest
     build: 
       context: images/apache
       args:
@@ -31,13 +33,14 @@ services:
       #- "/dev/null:/run/secrets/keys/code_sign_private"
       - "/var/run/docker.sock:/var/run/docker.sock"
     ports: 
-      - "8088:80"
+      - "8089:80"
     tty: true
     environment:
       - URL_BASE
       - PROJECT
   makeproject:
-    image: boinc/server_makeproject:$VERSION$TAG$DEFAULTARGS
+    #image: boinc/server_makeproject:$VERSION$TAG$DEFAULTARGS
+    image: ghcr.io/jehoonsong/ndist-makeproject:latest
     build: 
       context: images/makeproject
       #target: makeproject$DEFAULTARGS
@@ -53,11 +56,12 @@ services:
       - URL_BASE
       - PROJECT
     depends_on:
-        - mysql
-        - apache
+      - mysql
+      - apache
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
+    #image: ghcr.io/jehoonsong/phpmyadmin:latest
     ports:
       - "8081:80"
     environment:
@@ -65,6 +69,7 @@ services:
     restart: unless-stopped
     depends_on:
       - mysql
+      - apache
 
 
   # boinncc:
