--- a/ndist/images/boincc/Dockerfile.nvidia
+++ b/ndist/images/boincc/Dockerfile.nvidia
@@ -40,5 +40,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 RUN apt update && apt install -y nano cron
 
 RUN apt update && apt install -y docker.io
+
+RUN apt update && apt install -y vim
+
+RUN apt update && apt install -y rsync make zip unzip
     
 CMD ["start-boinc.sh"]
