--- a/ndist/images/boincc/.env
+++ b/ndist/images/boincc/.env
@@ -1,3 +1,3 @@
-BOINC_ACCOUNT_KEY=f0d4808a5f7e00afb63a56d4464a5c6c
+BOINC_ACCOUNT_KEY=
 BOINC_REMOTE_HOST=172.30.1.102
 BOINC_PROJECT_URL=http://${BOINC_REMOTE_HOST}:80/ndist
