--- a/ndist/images/boincc/.env
+++ b/ndist/images/boincc/.env
@@ -1,3 +1,3 @@
-BOINC_ACCOUNT_KEY=
+BOINC_ACCOUNT_KEY=e846ebbf3686ddbaf37a40fd3641ec09
 BOINC_REMOTE_HOST=172.30.1.102
 BOINC_PROJECT_URL=http://${BOINC_REMOTE_HOST}:80/ndist
