--- a/ndist/images/boincc/docker-compose.yml
+++ b/ndist/images/boincc/docker-compose.yml
@@ -13,7 +13,7 @@ services:
         #- platform=linux/arm64
     image: ghcr.io/jehoonsong/boincc:latest
     environment:
-      - BOINC_CMD_LINE_OPTIONS=--dir /var/lib/boinc --attach_project ${BOINC_PROJECT_URL} ${BOINC_ACCOUNT_KEY}
+      - BOINC_CMD_LINE_OPTIONS=--dir /var/lib/boinc --allow_remote_gui_rpc --attach_project ${BOINC_PROJECT_URL} ${BOINC_ACCOUNT_KEY}
       - BOINC_REMOTE_HOST=${BOINC_REMOTE_HOST}
       - BOINC_PROJECT_URL=${BOINC_PROJECT_URL}
       - BOINC_ACCOUNT_KEY=${BOINC_ACCOUNT_KEY}
@@ -23,9 +23,8 @@ services:
       - ./shared:/shared
       - ../../data:/data
       - /tmp:/tmp
-      - ./cc_config.xml:/var/lib/boinc/cc_config.xml
-      - ./cc_config.xml:/var/lib/boinc-client/cc_config.xml
       - /var/run/docker.sock:/var/run/docker.sock
+      - ./cc_config.xml:/var/lib/boinc/cc_config.xml
       - ./app_config.xml:/var/lib/boinc/projects/${BOINC_REMOTE_HOST}_80_ndist/app_config.xml
       - ./global_prefs_override.xml:/var/lib/boinc/global_prefs_override.xml
 
