--- a/ndist/images/boincc/.env
+++ b/ndist/images/boincc/.env
@@ -1,3 +1,6 @@
 BOINC_ACCOUNT_KEY=e846ebbf3686ddbaf37a40fd3641ec09
 BOINC_REMOTE_HOST=172.30.1.102
-BOINC_PROJECT_URL=http://${BOINC_REMOTE_HOST}:80/ndist
+BOINC_PROJECT_URL=http://172.30.1.102:80/ndist
+APPCONFDIR=/var/lib/boinc/projects/172.30.1.102_80_ndist/app_config.xml
+NVIDIA_VISIBLE_DEVICES=all
+BOINC_CMD_LINE_OPTIONS=--dir /var/lib/boinc --attach_project ${BOINC_PROJECT_URL} ${BOINC_ACCOUNT_KEY}
