--- a/ndist/images/boincc/docker-compose.yml
+++ b/ndist/images/boincc/docker-compose.yml
@@ -27,5 +27,9 @@ services:
       - ./cc_config.xml:/var/lib/boinc/cc_config.xml
       - ./app_config.xml:/var/lib/boinc/projects/${BOINC_REMOTE_HOST}_80_ndist/app_config.xml
       - ./global_prefs_override.xml:/var/lib/boinc/global_prefs_override.xml
+      - ./remote_hosts.cfg:/var/lib/boinc/remote_hosts.cfg
+    ports:
+      - "31416:31416"   
+      - "80:80"      
 
     restart: unless-stopped
