--- a/ndist/images/boincc-dev/Dockerfile.nvidia
+++ b/ndist/images/boincc-dev/Dockerfile.nvidia
@@ -44,14 +44,15 @@ RUN apt update && apt install -y git build-essential libssl-dev libcurl4-openssl
     wx-common libtool automake autoconf pkg-config \
     libgtk-3-dev libsqlite3-dev
 
-#e libwxgtk3.0-gtk3-dev
-#4.857 E: Couldn't find any package by glob 'libwxgtk3.0-gtk3-dev'
+WORKDIR /
 RUN apt update && apt install libwxgtk3.2-dev wx3.2-headers -y 
-RUN git clone https://github.com/BOINC/boinc.git 
-
 RUN apt update && apt install libnotify-dev -y 
+RUN mkdir -p src && cd src && git clone https://github.com/BOINC/boinc.git 
+RUN cd src/boinc && ./_autosetup && ./configure --disable-client --disable-server LDFLAGS=-static-libgcc CFLAGS=-ftree-vectorize CXXFLAGS=-ftree-vectorize FFLAGS=-ftree-vectorize --disable-manager && make -j$(nproc)
 
-#RUN cd boinc && ./_autosetup && mkdir build && cd build && ../configure --disable-server && make -j$(nproc)
+COPY boinc_progress src/boinc/samples/boinc_progress
+RUN cd src/boinc/samples/boinc_progress && make && cp boinc_progress /usr/bin
+
+WORKDIR /var/lib/boinc
     
-# CMD ["start-boinc.sh"]
-
+CMD ["start-boinc.sh"]
