--- a/ndist/images/boincc/Dockerfile.nvidia
+++ b/ndist/images/boincc/Dockerfile.nvidia
@@ -4,10 +4,7 @@ LABEL maintainer="BOINC" \
       description="NVIDIA-savvy (CUDA & OpenCL) BOINC client."
 
 # Global environment settings
-ENV BOINC_GUI_RPC_PASSWORD="123" \
-    BOINC_REMOTE_HOST="127.0.0.1" \
-    BOINC_CMD_LINE_OPTIONS="" \
-	DEBIAN_FRONTEND=noninteractive
+ENV DEBIAN_FRONTEND=noninteractive
 
 # Copy files
 COPY bin/ /usr/bin/
@@ -37,29 +34,25 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     apt-get autoremove -y && \
     rm -rf /var/lib/apt/lists/*
 
-<<<<<<< HEAD
-RUN apt update && apt install -y nano cron
-
-RUN apt update && apt install -y docker.io
-
-RUN apt update && apt install -y vim
-
-RUN apt update && apt install -y rsync make zip unzip
-
-RUN apt update && apt install -y redis
-
-RUN apt update
-
-RUN apt install libboinc-app-dev -y
-
-COPY report_progress.c .
-# RUN gcc report_progress -o report_progress -lboinc -I/usr/include/boinc  
-
-=======
 RUN apt update && apt install -y \
 	nano cron vim docker.io rsync make zip unzip redis 
     
->>>>>>> b1f72ab0e678b17537ccf1dc5356e1de7f5fe935
+ENV BOINC_ACCOUNT_KEY=367e77b2fed5a7f92265ae4eaae7fa1a
+# ENV BOINC_REMOTE_HOST=172.30.1.102
+# http://219.254.89.60:8089/ndist/
+ENV BOINC_PROJECT_URL=http://219.254.89.60:8089/ndist
+#APPCONFDIR=/var/lib/boinc/projects/219.254.89.60_8089_ndist/app_config.xml
+ENV NVIDIA_VISIBLE_DEVICES=all
+
+# Global environment settings
+ENV BOINC_GUI_RPC_PASSWORD="123" \
+    BOINC_REMOTE_HOST="219.254.89.60" 
+
+ENV BOINC_CMD_LINE_OPTIONS="--dir /var/lib/boinc --attach_project ${BOINC_PROJECT_URL} ${BOINC_ACCOUNT_KEY}"
+
+COPY ./cc_config.xml /var/lib/boinc/cc_config.xml
+COPY ./app_config.xml /var/lib/boinc/projects/${BOINC_REMOTE_HOST}_8089_ndist/app_config.xml
+COPY ./global_prefs_override.xml /var/lib/boinc/global_prefs_override.xml
+COPY ./remote_hosts.cfg /var/lib/boinc/remote_hosts.cfg
+
 CMD ["start-boinc.sh"]
-
-
